--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ classifiers=[
     'License :: OSI Approved :: BSD License',
     'Natural Language :: English',
     'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.5',
     'Programming Language :: Python :: 3.6',
     'Programming Language :: Python :: 3.7',
     'Programming Language :: Python :: 3.8',
@@ -24,7 +23,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "*"
+python = ">=3.6"
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
@@ -35,9 +34,8 @@ isort = "*"
 pylint = "*"
 pytest = "*"
 sphinx = "*"
-tox = "*"
 yapf = "*"
-
+nox = "*"
 
 
 [build-system]
