--- a/.pylintrc
+++ b/.pylintrc
@@ -1,13 +1,8 @@
-[MASTER]
-
 [FORMAT]
 max-line-length=120
 
 [MESSAGES CONTROL]
-disable=missing-docstring,invalid-name,raise-missing-from,too-few-public-methods,too-many-arguments
+disable=missing-docstring,invalid-name,raise-missing-from,too-few-public-methods,too-many-arguments,cyclic-import
 
 [DESIGN]
 max-parents=13
-
-[TYPECHECK]
-generated-members=REQUEST,acl_users,aq_parent,"[a-zA-Z]+_set{1,2}",save,delete
