--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,10 +27,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip poetry
         poetry install
-    - name: Lint
-      run: |
-        poetry run invoke lint
-        poetry run invoke format --check
+#    - name: Lint
+#      run: |
+#        poetry run invoke lint
+#        poetry run invoke format --check
     - name: Test
       run: |
         poetry run pytest
