--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ packages = [
 [tool.poetry.dependencies]
 python = ">=3.6"
 dataclasses = {version = "^0.8", python = "~3.6"}
+Django = {version = ">1.8", optional = true}
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
@@ -38,6 +39,9 @@ sphinx = "*"
 yapf = "*"
 nox = "*"
 testil = "^1.1"
+
+[tool.poetry.extras]
+django = ["Django"]
 
 [build-system]
 requires = ["poetry>=0.12"]
