--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip poetry
-        poetry install -E django
+        poetry install -E django -E flask
 #    - name: Lint
 #      run: |
 #        poetry run invoke lint
