--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ packages = [
 python = ">=3.6"
 dataclasses = {version = "^0.8", python = "~3.6"}
 Django = {version = ">1.8", optional = true}
+Flask-Caching = {version = "^1.10.0", optional = true}
 
 [tool.poetry.dev-dependencies]
 bumpversion = "*"
@@ -42,6 +43,7 @@ testil = "^1.1"
 
 [tool.poetry.extras]
 django = ["Django"]
+flask = ["Flask-Caching"]
 
 [build-system]
 requires = ["poetry>=0.12"]
