--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,60 +1,31 @@
-[tool]
-[tool.poetry]
+[project]
 name = "slycache"
 version = "0.3.0"
-homepage = "https://github.com/snopoke/slycache"
 description = "Service caching API"
-authors = ["snopoke <simongdkelly@gmail.com>"]
-readme = "README.rst"
-license =  "BSD-3-Clause"
-classifiers=[
-    'Development Status :: 4 - Beta',
-    'Intended Audience :: Developers',
-    'License :: OSI Approved :: BSD License',
-    'Natural Language :: English',
-    'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.6',
-    'Programming Language :: Python :: 3.7',
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
-    'Framework :: Django',
-    'Framework :: Flask'
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = []
+
+[project.optional-dependencies]
+flask = [
+    "flask-caching>=2.3.0",
 ]
-packages = [
-    { include = "slycache" },
-    { include = "tests", format = "sdist" },
+django = [
+    "django>=5.1.4",
 ]
-
-[tool.poetry.dependencies]
-python = ">=3.6"
-dataclasses = {version = "^0.8", python = "~3.6"}
-Django = {version = ">1.8", optional = true}
-Flask-Caching = {version = "^1.10.0", optional = true}
-
-[tool.poetry.dev-dependencies]
-bumpversion = "*"
-coverage = "*"
-flake8 = "*"
-invoke = "*"
-isort = "*"
-pylint = "*"
-pytest = "*"
-sphinx = "*"
-yapf = "*"
-nox = "*"
-testil = "^1.1"
-pytest-repeat = "^0.9.1"
-pytest-randomly = "^3.5.0"
-
-[tool.poetry.extras]
-django = ["Django"]
-flask = ["Flask-Caching"]
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 
 [tool.pytest.ini_options]
 addopts = "--strict-markers --tb=short --doctest-modules"
 python_files = "tests.py test_*.py *_tests.py"
 log_level = "debug"
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "ruff>=0.9.1",
+]
