--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,24 @@ description = "Service caching API"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = []
+homepage = "https://github.com/snopoke/slycache"
+authors = [
+    { name = "Simon Kelly", email = "simongdkelly@gmail.com" }
+]
+license = "BSD-3-Clause"
+classifiers = [
+    'Development Status :: 4 - Beta',
+    'Intended Audience :: Developers',
+    'License :: OSI Approved :: BSD License',
+    'Natural Language :: English',
+    'Programming Language :: Python :: 3',
+    'Programming Language :: Python :: 3.6',
+    'Programming Language :: Python :: 3.7',
+    'Programming Language :: Python :: 3.8',
+    'Programming Language :: Python :: 3.9',
+    'Framework :: Django',
+    'Framework :: Flask'
+]
 
 [project.optional-dependencies]
 flask = [
