--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,3 +49,8 @@ dev = [
     "pytest-randomly>=3.16.0",
     "ruff>=0.9.1",
 ]
+docs = [
+    "mkdocs-material>=9.5.49",
+    "mkdocstrings[python]>=0.27.0",
+    "pymdown-extensions>=10.14",
+]
