--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,13 +7,13 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v4
+    - uses: actions/setup-python@v5
+      with:
+        python-version-file: "pyproject.toml"
+    - name: Install uv
+      uses: astral-sh/setup-uv@v5
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip poetry
-        poetry install
-    - run: poetry config pypi-token.pypi "${{ secrets.PYPI_TOKEN }}"
-    - name: Publish package
-      run: poetry publish --build
+      run: uv sync --all-extras --all-groups
+    - name: Publish
+      run: uv publish --token "${{ secrets.PYPI_TOKEN }}"
