--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -32,4 +32,4 @@ jobs:
             mkdocs-material-
 
       - run: uv sync --all-extras --all-groups
-      - run: mkdocs gh-deploy --force
+      - run: uv run mkdocs gh-deploy --force
