--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = []
 homepage = "https://github.com/snopoke/slycache"
+repository = "https://github.com/snopoke/slycache"
+documentation = "https://snopoke.github.io/slycache/"
 authors = [
     { name = "Simon Kelly", email = "simongdkelly@gmail.com" }
 ]
@@ -16,12 +18,12 @@ classifiers = [
     'License :: OSI Approved :: BSD License',
     'Natural Language :: English',
     'Programming Language :: Python :: 3',
-    'Programming Language :: Python :: 3.6',
-    'Programming Language :: Python :: 3.7',
-    'Programming Language :: Python :: 3.8',
-    'Programming Language :: Python :: 3.9',
+    'Programming Language :: Python :: 3.1',
+    'Programming Language :: Python :: 3.12',
+    'Programming Language :: Python :: 3.13',
     'Framework :: Django',
-    'Framework :: Flask'
+    'Framework :: Flask',
+    'Topic :: Software Development :: Libraries :: Python Modules',
 ]
 
 [project.optional-dependencies]
